v0.6.2
- TWEAK: Improve compatibility CSS for WooCommerce 3.5.
- TWEAK: Improve letter spacing step, from 0.5px to 0.1px.
- FIX: Gutenberg blocks CSS.
- FIX: Customizer's shadow control JS.
- FIX: Customizer's footer builder JS.

v0.6.1
- NEW: WooCommerce cart's table responsive styles.
- NEW: Make search form's placeholder text translatable from theme's text domain.
- TWEAK: Adjust narrow content and content wrapper allowed width ranges in Customizer.
- TWEAK: Improve WooCommerce responsive cart table styles.
- FIX: Customizer's shadow control JS bug.
- FIX: Customizer's postmessage on button radius option for WooCommerce buttons.
- FIX: Customizer's postmessage on subsidiary headings.
- FIX: Custom CSS media queries order.
- FIX: Custom CSS on WooCommerce buttons and inputs.
- FIX: Some minor CSS.

v0.6.0
- NEW: Header menu highlight now has highlight text color option.
- TWEAK: Drastically improve Customizer performance (now it loads much faster).
- TWEAK: Now section side padding is merged to "Padding" option (to avoid confusion).
- FIX: Header sub-menu typography.
- FIX: Customizer color control's autocomplete issue.
- FIX: Customizer bugs.
- FIX: Some CSS bugs.
- FIX: Page header's default background on static pages.

v0.5.5
- TWEAK: Improve compatibility for Suki Pro.
- FIX: Page header's background not using feature image on static pages.

v0.5.4
- NEW: Customizer's dimension control.
- TWEAK: Improve default compatibility styles for Gutenberg.
- TWEAK: Improve compatibility for Suki Pro.
- TWEAK: Improve value range on all padding, border controls in Customizer.
- TWEAK: Improve Suki admin page content and design.
- FIX: Responsive settings on Customizer's Typography control.
- FIX: "Hide post title" option (Page Settings) bug on static page.
- REMOVE: Section side padding options on Customizer -- now is default in theme CSS.
- REMOVE: Gutenberg options on Customizer -- now is default in theme CSS.

v0.5.2
- FIX: custom CSS bug on v0.5.1.

v0.5.1